[gd_scene load_steps=41 format=3 uid="uid://deka6f0kjlaxn"]

[ext_resource type="Script" path="res://scripts/enemies/enemy_4.gd" id="1_qet1c"]
[ext_resource type="Texture2D" uid="uid://bdt33j4v8c7lr" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-hojre_charge-1.png" id="2_pl8t3"]
[ext_resource type="Shader" path="res://scenes/enemies/hurt_shader.gdshader" id="2_sebw8"]
[ext_resource type="Texture2D" uid="uid://cmj7voksl8yxg" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-hojre_charge-2.png" id="3_gcwxy"]
[ext_resource type="Texture2D" uid="uid://tx16lcv0yyjn" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-ned_charge-1.png" id="4_mfsju"]
[ext_resource type="Texture2D" uid="uid://b8qbki4b8yn4e" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-ned_charge-2.png" id="5_0in41"]
[ext_resource type="Texture2D" uid="uid://iq5qke7vgtvd" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-op_charge-1.png" id="6_p7onv"]
[ext_resource type="Texture2D" uid="uid://8q3ohex2tba2" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-op_charge-2.png" id="7_vlmf5"]
[ext_resource type="Texture2D" uid="uid://bj1uyinroc6vl" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-venstre_charge-1.png" id="8_flhbk"]
[ext_resource type="Texture2D" uid="uid://cesk1t58hh0wj" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-venstre_charge-2.png" id="9_yt3p8"]
[ext_resource type="Texture2D" uid="uid://c64crocud4xqa" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-hojre_ilde-1-3_walk-1-3.png" id="10_vxok0"]
[ext_resource type="Texture2D" uid="uid://cqr0u6rg76jai" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-hojre_ilde-2.png" id="11_ncb4g"]
[ext_resource type="Texture2D" uid="uid://255yrqbcnnl3" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-hojre_ilde-4.png" id="12_gm2cf"]
[ext_resource type="Texture2D" uid="uid://ffbdv6157ejs" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-ned_ilde-1-3_walk-1-3.png" id="13_idj67"]
[ext_resource type="Texture2D" uid="uid://bp0d04kprgasa" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-ned_ilde-2.png" id="14_rx1mh"]
[ext_resource type="Texture2D" uid="uid://8jxu4sw13yeg" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-ned_ilde-4.png" id="15_ruj7a"]
[ext_resource type="Texture2D" uid="uid://dvqomxdai64sx" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-op_ilde-1-3_walk-1-3.png" id="16_mibk2"]
[ext_resource type="Texture2D" uid="uid://xr4467ftorv6" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-op_ilde-2.png" id="17_3mspk"]
[ext_resource type="Texture2D" uid="uid://ck53efg2udh3i" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-op_ilde-4.png" id="18_weae7"]
[ext_resource type="Texture2D" uid="uid://btwi1t0q4ykrb" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-venstre_ilde-1-3_walk-1-3.png" id="19_itudp"]
[ext_resource type="Texture2D" uid="uid://dbx0yrxb6rg3d" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-venstre_ilde-2.png" id="20_ogbyc"]
[ext_resource type="Texture2D" uid="uid://ce6on1brkpx2t" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-venstre_ilde-4.png" id="21_0ppo7"]
[ext_resource type="Texture2D" uid="uid://cjeugrfk22kgb" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-hojre_walk-2.png" id="22_0rs4x"]
[ext_resource type="Texture2D" uid="uid://ch8kduxctg3ty" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-hojre_walk-4.png" id="23_rdb74"]
[ext_resource type="Texture2D" uid="uid://dxinr4506ehuk" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-ned_walk-2.png" id="24_8isg5"]
[ext_resource type="Texture2D" uid="uid://bl0udk1lw8rp7" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-ned_walk-4.png" id="25_48aox"]
[ext_resource type="Texture2D" uid="uid://cpdwdsjhpp5hk" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-op_walk-2.png" id="26_t1q61"]
[ext_resource type="Texture2D" uid="uid://bs8cmcpcqyxdu" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-op_walk-4.png" id="27_vktky"]
[ext_resource type="Texture2D" uid="uid://bchpv10k4gtdl" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-venstre_walk-2.png" id="28_6lxrv"]
[ext_resource type="Texture2D" uid="uid://yw2rjxeqesch" path="res://sprites/fjender/jord_goleem_enemy/jord-goleem-venstre_walk-4.png" id="29_54e68"]
[ext_resource type="AudioStream" uid="uid://pi6r2bmounou" path="res://sounds/GolemGåSound.mp3" id="30_ajo0b"]
[ext_resource type="AudioStream" uid="uid://cna2unw4wm8w3" path="res://sounds/GolemLøbSound.mp3" id="32_vp1jq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dapbm"]
radius = 28.5044

[sub_resource type="ShaderMaterial" id="ShaderMaterial_abl4r"]
resource_local_to_scene = true
shader = ExtResource("2_sebw8")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = null

[sub_resource type="SpriteFrames" id="SpriteFrames_h1ou1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_pl8t3")
}, {
"duration": 1.0,
"texture": ExtResource("3_gcwxy")
}],
"loop": true,
"name": &"Charge højre",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_mfsju")
}, {
"duration": 1.0,
"texture": ExtResource("5_0in41")
}],
"loop": true,
"name": &"Charge ned",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_p7onv")
}, {
"duration": 1.0,
"texture": ExtResource("7_vlmf5")
}],
"loop": true,
"name": &"Charge op",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_flhbk")
}, {
"duration": 1.0,
"texture": ExtResource("9_yt3p8")
}],
"loop": true,
"name": &"Charge venstre",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_vxok0")
}, {
"duration": 1.0,
"texture": ExtResource("11_ncb4g")
}, {
"duration": 1.0,
"texture": ExtResource("10_vxok0")
}, {
"duration": 1.0,
"texture": ExtResource("12_gm2cf")
}],
"loop": true,
"name": &"Idle højre",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_idj67")
}, {
"duration": 1.0,
"texture": ExtResource("14_rx1mh")
}, {
"duration": 1.0,
"texture": ExtResource("13_idj67")
}, {
"duration": 1.0,
"texture": ExtResource("15_ruj7a")
}],
"loop": true,
"name": &"Idle ned",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_mibk2")
}, {
"duration": 1.0,
"texture": ExtResource("17_3mspk")
}, {
"duration": 1.0,
"texture": ExtResource("16_mibk2")
}, {
"duration": 1.0,
"texture": ExtResource("18_weae7")
}],
"loop": true,
"name": &"Idle op",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_itudp")
}, {
"duration": 1.0,
"texture": ExtResource("20_ogbyc")
}, {
"duration": 1.0,
"texture": ExtResource("19_itudp")
}, {
"duration": 1.0,
"texture": ExtResource("21_0ppo7")
}],
"loop": true,
"name": &"Idle venstre",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_vxok0")
}, {
"duration": 1.0,
"texture": ExtResource("22_0rs4x")
}, {
"duration": 1.0,
"texture": ExtResource("10_vxok0")
}, {
"duration": 1.0,
"texture": ExtResource("23_rdb74")
}],
"loop": true,
"name": &"Walk højre",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_idj67")
}, {
"duration": 1.0,
"texture": ExtResource("24_8isg5")
}, {
"duration": 1.0,
"texture": ExtResource("13_idj67")
}, {
"duration": 1.0,
"texture": ExtResource("25_48aox")
}],
"loop": true,
"name": &"Walk ned",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_mibk2")
}, {
"duration": 1.0,
"texture": ExtResource("26_t1q61")
}, {
"duration": 1.0,
"texture": ExtResource("16_mibk2")
}, {
"duration": 1.0,
"texture": ExtResource("27_vktky")
}],
"loop": true,
"name": &"Walk op",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_itudp")
}, {
"duration": 1.0,
"texture": ExtResource("28_6lxrv")
}, {
"duration": 1.0,
"texture": ExtResource("19_itudp")
}, {
"duration": 1.0,
"texture": ExtResource("29_54e68")
}],
"loop": true,
"name": &"Walk venstre",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_ch6lp"]
resource_name = "Hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [null, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_k3gd5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [null]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g8dfa"]
_data = {
"Hurt": SubResource("Animation_ch6lp"),
"RESET": SubResource("Animation_k3gd5")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u8gdl"]
radius = 30.5
height = 61.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gqir2"]
radius = 249.098

[node name="enemy_4" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(2, 2)
script = ExtResource("1_qet1c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dapbm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_abl4r")
position = Vector2(1.90735e-06, 1.90735e-06)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_h1ou1")
animation = &"Idle ned"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_g8dfa")
}

[node name="Hitbox" type="Area2D" parent="."]

[node name="HitboxCollision" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CapsuleShape2D_u8gdl")

[node name="WallDetector" type="RayCast2D" parent="."]
target_position = Vector2(50, 0)

[node name="WallDetector2" type="RayCast2D" parent="."]
position = Vector2(0.5, 17)
target_position = Vector2(39, 0)

[node name="WallDetector3" type="RayCast2D" parent="."]
position = Vector2(0.5, -21.5)
target_position = Vector2(39, 0)

[node name="View" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="View"]
shape = SubResource("CircleShape2D_gqir2")

[node name="GolemGåSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("30_ajo0b")
volume_db = 15.0
bus = &"Sfx"
parameters/looping = true

[node name="GolemLøbSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("32_vp1jq")
volume_db = 20.0
bus = &"Sfx"

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="View" to="." method="_on_view_body_entered"]
[connection signal="body_exited" from="View" to="." method="_on_view_body_exited"]
